--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,18 @@
  *= require_self
  *= require_tree .
  */
+
+.product_image {
+    width: 200px;
+    height: 200px;
+}
+
+.product_image_wrapper {
+    float: left;
+    padding-right: 10px;
+    padding-top: 10px;
+}
+
+#myCarousel {
+    margin-top: 50px;
+}
