--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,49 +38,334 @@
   </head>
   <body>
 
-    <div class="navbar navbar-fluid-top">
-      <div class="navbar-inner">
-        <div class="container-fluid">
-          <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="#">Trend</a>
-          <div class="container-fluid nav-collapse">
-            <ul class="nav">
-              <li><%= link_to "Link1", "/path1"  %></li>
-              <li><%= link_to "Link2", "/path2"  %></li>
-              <li><%= link_to "Link3", "/path3"  %></li>
-            </ul>
-          </div><!--/.nav-collapse -->
+
+
+
+
+
+  <!-- NAVBAR
+ ================================================== -->
+  <div class="navbar-wrapper">
+    <!-- Wrap the .navbar in .container to center it within the absolutely positioned parent. -->
+    <div class="container">
+
+      <div class="navbar navbar-inverse navbar-fixed-top">
+        <div class="navbar-inner">
+          <div class="container-fluid">
+              <!-- Responsive Navbar Part 1: Button for triggering responsive navbar (not covered in tutorial). Include responsive CSS to utilize. -->
+              <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="brand" href="#">Trend Checkout</a>
+              <!-- Responsive Navbar Part 2: Place all navbar contents you want collapsed withing .navbar-collapse.collapse. -->
+              <div class="nav-collapse collapse">
+                <ul class="nav">
+                  <li class="active"><a href="#">Home</a></li>
+                  <li><a href="#about">Register</a></li>
+                  <li><a href="#contact">Login</a></li>
+                  <li><a href="#contact">Clothing</a></li>
+                  <li><a href="#contact">Shoes</a></li>
+                  <li><a href="#contact">Handbags</a></li>
+                  <li><a href="#contact">Accessories</a></li>
+                  <li><a href="#contact">Luggage</a></li>
+                  <li><a href="#contact">Jewelry</a></li>
+                  <li><a href="#contact">Watches</a></li>
+                  <!-- Read about Bootstrap dropdowns at http://twbs.github.com/bootstrap/javascript.html#dropdowns -->
+                  <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">More <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                      <li><a href="#">Clothing</a></li>
+                      <li><a href="#">Shoes</a></li>
+                      <li><a href="#">Handbags</a></li>
+                      <li><a href="#">Jewelry</a></li>
+                      <li><a href="#">Watches</a></li>
+                    </ul>
+                  </li>
+                </ul>
+              </div><!--/.nav-collapse -->
+            </div>
+        </div><!-- /.navbar-inner -->
+      </div><!-- /.navbar -->
+
+    </div> <!-- /.container -->
+  </div><!-- /.navbar-wrapper -->
+
+
+
+  <!-- Carousel
+ ================================================== -->
+  <div id="myCarousel" class="carousel slide">
+    <div class="carousel-inner">
+      <div class="item active">
+        <img src="/assets/home/slide-01.jpg" alt="">
+        <div class="container">
+          <div class="carousel-caption">
+            <h1>Example headline.</h1>
+            <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+            <a class="btn btn-large btn-primary" href="#">Sign up today</a>
+          </div>
+        </div>
+      </div>
+      <div class="item">
+        <img src="/assets/home/slide-02.jpg" alt="">
+        <div class="container">
+          <div class="carousel-caption">
+            <h1>Another example headline.</h1>
+            <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+            <a class="btn btn-large btn-primary" href="#">Learn more</a>
+          </div>
+        </div>
+      </div>
+      <div class="item">
+        <img src="/assets/home/slide-03.jpg" alt="">
+        <div class="container">
+          <div class="carousel-caption">
+            <h1>One more for good measure.</h1>
+            <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+            <a class="btn btn-large btn-primary" href="#">Browse gallery</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <a class="left carousel-control" href="#myCarousel" data-slide="prev">&lsaquo;</a>
+    <a class="right carousel-control" href="#myCarousel" data-slide="next">&rsaquo;</a>
+  </div><!-- /.carousel -->
+
+
+
+  <!-- Marketing messaging and featurettes
+ ================================================== -->
+  <!-- Wrap the rest of the page in another container to center all the content. -->
+
+  <div class="container-fluid marketing">
+
+    <!-- Three columns of text below the carousel -->
+    <div class="row-fluid">
+        <div class="product_image_wrapper">
+           <div class="product_image">
+             <a href="#myModal" class="thumbnail" data-toggle="modal">
+                <img src="/assets/home/products/1.jpg"/>
+             </a>
+           </div>
+        </div>
+        <div class="product_image_wrapper">
+            <div class="product_image">
+                <img src="/assets/home/products/2.jpg"/>
+            </div>
+        </div>
+        <div class="product_image_wrapper">
+            <div class="product_image">
+                <img src="/assets/home/products/3.jpg"/>
+            </div>
+        </div>
+        <div class="product_image_wrapper">
+            <div class="product_image">
+                <img src="/assets/home/products/4.jpg"/>
+            </div>
+        </div>
+        <div class="product_image_wrapper">
+            <div class="product_image">
+                <img src="/assets/home/products/5.jpg"/>
+            </div>
+        </div>
+        <div class="product_image_wrapper">
+            <div class="product_image">
+                <img src="/assets/home/products/6.jpg"/>
+            </div>
+        </div>
+        <div class="product_image_wrapper">
+            <div class="product_image">
+                <img src="/assets/home/products/7.jpg"/>
+            </div>
+        </div>
+        <div class="product_image_wrapper">
+            <div class="product_image">
+                <img src="/assets/home/products/8.jpg"/>
+            </div>
+        </div>
+        <div class="product_image_wrapper">
+            <div class="product_image">
+                <img src="/assets/home/products/9.jpg"/>
+            </div>
+        </div>
+        <div class="product_image_wrapper">
+            <div class="product_image">
+                <img src="/assets/home/products/10.jpg"/>
+            </div>
+        </div>
+        <div class="product_image_wrapper">
+            <div class="product_image">
+                <img src="/assets/home/products/11.jpg"/>
+            </div>
+        </div>
+        <div class="product_image_wrapper">
+            <div class="product_image">
+                <img src="/assets/home/products/12.jpg"/>
+            </div>
+        </div>
+        <div class="product_image_wrapper">
+            <div class="product_image">
+                <img src="/assets/home/products/13.jpg"/>
+            </div>
+        </div>
+        <div class="product_image_wrapper">
+            <div class="product_image">
+                <img src="/assets/home/products/14.jpg"/>
+            </div>
+        </div>
+        <div class="product_image_wrapper">
+            <div class="product_image">
+                <img src="/assets/home/products/15.jpg"/>
+            </div>
+        </div>
+        <div class="product_image_wrapper">
+            <div class="product_image">
+                <img src="/assets/home/products/13.jpg"/>
+            </div>
+        </div>
+        <div class="product_image_wrapper">
+            <div class="product_image">
+                <img src="/assets/home/products/14.jpg"/>
+            </div>
+        </div>
+        <div class="product_image_wrapper">
+            <div class="product_image">
+                <img src="/assets/home/products/15.jpg"/>
+            </div>
+        </div>
+      <div class="product_image_wrapper">
+        <div class="product_image">
+          <img src="/assets/home/products/1.jpg"/>
+        </div>
+      </div>
+      <div class="product_image_wrapper">
+        <div class="product_image">
+          <img src="/assets/home/products/2.jpg"/>
+        </div>
+      </div>
+      <div class="product_image_wrapper">
+        <div class="product_image">
+          <img src="/assets/home/products/3.jpg"/>
+        </div>
+      </div>
+      <div class="product_image_wrapper">
+        <div class="product_image">
+          <img src="/assets/home/products/4.jpg"/>
+        </div>
+      </div>
+      <div class="product_image_wrapper">
+        <div class="product_image">
+          <img src="/assets/home/products/9.jpg"/>
+        </div>
+      </div>
+      <div class="product_image_wrapper">
+        <div class="product_image">
+          <img src="/assets/home/products/10.jpg"/>
         </div>
       </div>
     </div>
 
-    <div class="container-fluid">
-      <div class="row-fluid">
-        <div class="span3">
-          <div class="well sidebar-nav">
-            <ul class="nav nav-list">
-              <li class="nav-header">Sidebar</li>
-              <li><%= link_to "Link1", "/path1"  %></li>
-              <li><%= link_to "Link2", "/path2"  %></li>
-              <li><%= link_to "Link3", "/path3"  %></li>
-            </ul>
-          </div><!--/.well -->
-        </div><!--/span-->
-        <div class="span9">
-          <%= bootstrap_flash %>
-          <%= yield %>
-        </div>
-      </div><!--/row-->
 
-      <footer>
-        <p>&copy; Company 2013</p>
-      </footer>
 
-    </div> <!-- /container -->
+
+
+    <!-- FOOTER -->
+    <footer>
+      <p class="pull-right"><a href="#">Back to top</a></p>
+      <p>&copy; 2013 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+    </footer>
+
+
+    <div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+        <h3 id="myModalLabel">Modal header</h3>
+      </div>
+      <div class="modal-body">
+        <a href="#" class="thumbnail"><img src="/assets/home/products/1.jpg"/></a>
+      </div>
+      <div class="modal-footer">
+        <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+        <button class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+
+  </div><!-- /.container -->
+
+
+
+  <!-- Le javascript
+ ================================================== -->
+  <!-- Placed at the end of the document so the pages load faster -->
+  <script src="../assets/js/jquery.js"></script>
+  <script src="../assets/js/bootstrap-transition.js"></script>
+  <script src="../assets/js/bootstrap-alert.js"></script>
+  <script src="../assets/js/bootstrap-modal.js"></script>
+  <script src="../assets/js/bootstrap-dropdown.js"></script>
+  <script src="../assets/js/bootstrap-scrollspy.js"></script>
+  <script src="../assets/js/bootstrap-tab.js"></script>
+  <script src="../assets/js/bootstrap-tooltip.js"></script>
+  <script src="../assets/js/bootstrap-popover.js"></script>
+  <script src="../assets/js/bootstrap-button.js"></script>
+  <script src="../assets/js/bootstrap-collapse.js"></script>
+  <script src="../assets/js/bootstrap-carousel.js"></script>
+  <script src="../assets/js/bootstrap-typeahead.js"></script>
+  <script>
+      !function ($) {
+          $(function(){
+              // carousel demo
+              $('#myCarousel').carousel()
+          })
+      }(window.jQuery)
+  </script>
+  <script src="../assets/js/holder/holder.js"></script>
+
+
+    <!--<div class="navbar navbar-fluid-top">-->
+      <!--<div class="navbar-inner">-->
+        <!--<div class="container-fluid">-->
+          <!--<a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse">-->
+            <!--<span class="icon-bar"></span>-->
+            <!--<span class="icon-bar"></span>-->
+            <!--<span class="icon-bar"></span>-->
+          <!--</a>-->
+          <!--<a class="brand" href="#">Trend</a>-->
+          <!--<div class="container-fluid nav-collapse">-->
+            <!--<ul class="nav">-->
+              <!--<li><%= link_to "Link1", "/path1"  %></li>-->
+              <!--<li><%= link_to "Link2", "/path2"  %></li>-->
+              <!--<li><%= link_to "Link3", "/path3"  %></li>-->
+            <!--</ul>-->
+          <!--</div>&lt;!&ndash;/.nav-collapse &ndash;&gt;-->
+        <!--</div>-->
+      <!--</div>-->
+    <!--</div>-->
+
+    <!--<div class="container-fluid">-->
+      <!--<div class="row-fluid">-->
+        <!--<div class="span3">-->
+          <!--<div class="well sidebar-nav">-->
+            <!--<ul class="nav nav-list">-->
+              <!--<li class="nav-header">Sidebar</li>-->
+              <!--<li><%= link_to "Link1", "/path1"  %></li>-->
+              <!--<li><%= link_to "Link2", "/path2"  %></li>-->
+              <!--<li><%= link_to "Link3", "/path3"  %></li>-->
+            <!--</ul>-->
+          <!--</div>&lt;!&ndash;/.well &ndash;&gt;-->
+        <!--</div>&lt;!&ndash;/span&ndash;&gt;-->
+        <!--<div class="span9">-->
+          <!--<%= bootstrap_flash %>-->
+          <!--<%= yield %>-->
+        <!--</div>-->
+      <!--</div>&lt;!&ndash;/row&ndash;&gt;-->
+
+      <!--<footer>-->
+        <!--<p>&copy; Company 2013</p>-->
+      <!--</footer>-->
+
+    <!--</div> &lt;!&ndash; /container &ndash;&gt;-->
 
   </body>
 </html>
