--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Trend Checkout | Checkout Latest Styles"/>
+    <meta property="og:url" content="http://www.trendcheckout.com"/>
+    <meta property="og:image" content="http://www.trendcheckout.com/assets/fb_profile.png"/>
+    <meta property="og:site_name" content="Trend Checkout"/>
+    <meta property="fb:app_id" content="530869970319194"/>
     <title><%= content_for?(:title) ? yield(:title) : "Trend" %></title>
+
     <%= csrf_meta_tags %>
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
@@ -284,7 +290,29 @@
         <h3 id="myModalLabel">Modal header</h3>
       </div>
       <div class="modal-body">
-        <a href="#" class="thumbnail"><img src="/assets/home/products/1.jpg"/></a>
+        <div class="modal_thumbnail">
+            <a href="#" class="thumbnail"><img class="modal_display_image" src="/assets/home/products/1_big.jpg"/></a>
+        </div>
+        <div class="modal_content">
+          <div class="modal_product_title">
+              <a href="#">The Reformation :: CLOTHES :: TOPS :: SUNFLOWER TOP</a>
+          </div>
+          <div class="modal_product_price">
+              <p>$138.00</p>
+          </div>
+          <div class="modal_product_description">
+            <p>We are loving this effortless boho floral number by lucy love! It's flirtly ruffle and overlapping layers makes this dress perfect for any casual summertime event!</p>
+            <p><span class="attribute_name">ASIN:</span><span class="attribute_value">B007ZLEJ7C</span></p>
+            <p><span class="attribute_name">Product Dimensions:</span><span class="attribute_value"> 1 x 1 x 1 inches; 1 pounds </span></p>
+            <p><span class="attribute_name">Shipping Weight:</span><span class="attribute_value"> 1 pounds (View shipping rates and policies)</span></p>
+            <p><span class="attribute_name">Shipping:</span><span class="attribute_value"> This item is also available for shipping to select countries outside the U.S.</span></p>
+
+          </div>
+          <div class="modal_product_social">
+            <div class="fb-like" data-href="http://www.trendcheckout.com" data-width="450" data-layout="button_count" data-show-faces="true" data-send="false"></div>
+
+          </div>
+        </div>
       </div>
       <div class="modal-footer">
         <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
@@ -366,6 +394,30 @@
       <!--</footer>-->
 
     <!--</div> &lt;!&ndash; /container &ndash;&gt;-->
+
+  <div id="fb-root"></div>
+  <script>
+      window.fbAsyncInit = function() {
+          // init the FB JS SDK
+          FB.init({
+              appId      : '530869970319194',                        // App ID from the app dashboard
+              channelUrl : '//WWW.trendcheckout.COM/index.html  ', // Channel file for x-domain comms
+              status     : true,                                 // Check Facebook Login status
+              xfbml      : true                                  // Look for social plugins on the page
+          });
+
+          // Additional initialization code such as adding Event Listeners goes here
+      };
+
+      // Load the SDK asynchronously
+      (function(d, s, id){
+          var js, fjs = d.getElementsByTagName(s)[0];
+          if (d.getElementById(id)) {return;}
+          js = d.createElement(s); js.id = id;
+          js.src = "//connect.facebook.net/en_US/all.js";
+          fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));
+  </script>
 
   </body>
 </html>
