--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -104,243 +104,15 @@
   </div><!-- /.navbar-wrapper -->
 
 
-
-  <!-- Carousel
- ================================================== -->
-  <div id="myCarousel" class="carousel slide">
-    <div class="carousel-inner">
-      <div class="item active">
-        <img src="/assets/home/slide-01.jpg" alt="">
-        <div class="container">
-          <div class="carousel-caption">
-            <h1>Example headline.</h1>
-            <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-            <a class="btn btn-large btn-primary" href="#">Sign up today</a>
-          </div>
-        </div>
-      </div>
-      <div class="item">
-        <img src="/assets/home/slide-02.jpg" alt="">
-        <div class="container">
-          <div class="carousel-caption">
-            <h1>Another example headline.</h1>
-            <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-            <a class="btn btn-large btn-primary" href="#">Learn more</a>
-          </div>
-        </div>
-      </div>
-      <div class="item">
-        <img src="/assets/home/slide-03.jpg" alt="">
-        <div class="container">
-          <div class="carousel-caption">
-            <h1>One more for good measure.</h1>
-            <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-            <a class="btn btn-large btn-primary" href="#">Browse gallery</a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <a class="left carousel-control" href="#myCarousel" data-slide="prev">&lsaquo;</a>
-    <a class="right carousel-control" href="#myCarousel" data-slide="next">&rsaquo;</a>
-  </div><!-- /.carousel -->
-
-
-
-  <!-- Marketing messaging and featurettes
- ================================================== -->
-  <!-- Wrap the rest of the page in another container to center all the content. -->
-
-  <div class="container-fluid marketing">
-
-    <!-- Three columns of text below the carousel -->
-    <div class="row-fluid">
-        <div class="product_image_wrapper">
-           <div class="product_image">
-             <a href="#myModal" class="thumbnail" data-toggle="modal">
-                <img src="/assets/home/products/1.jpg"/>
-             </a>
-           </div>
-        </div>
-        <div class="product_image_wrapper">
-            <div class="product_image">
-                <img src="/assets/home/products/2.jpg"/>
-            </div>
-        </div>
-        <div class="product_image_wrapper">
-            <div class="product_image">
-                <img src="/assets/home/products/3.jpg"/>
-            </div>
-        </div>
-        <div class="product_image_wrapper">
-            <div class="product_image">
-                <img src="/assets/home/products/4.jpg"/>
-            </div>
-        </div>
-        <div class="product_image_wrapper">
-            <div class="product_image">
-                <img src="/assets/home/products/5.jpg"/>
-            </div>
-        </div>
-        <div class="product_image_wrapper">
-            <div class="product_image">
-                <img src="/assets/home/products/6.jpg"/>
-            </div>
-        </div>
-        <div class="product_image_wrapper">
-            <div class="product_image">
-                <img src="/assets/home/products/7.jpg"/>
-            </div>
-        </div>
-        <div class="product_image_wrapper">
-            <div class="product_image">
-                <img src="/assets/home/products/8.jpg"/>
-            </div>
-        </div>
-        <div class="product_image_wrapper">
-            <div class="product_image">
-                <img src="/assets/home/products/9.jpg"/>
-            </div>
-        </div>
-        <div class="product_image_wrapper">
-            <div class="product_image">
-                <img src="/assets/home/products/10.jpg"/>
-            </div>
-        </div>
-        <div class="product_image_wrapper">
-            <div class="product_image">
-                <img src="/assets/home/products/11.jpg"/>
-            </div>
-        </div>
-        <div class="product_image_wrapper">
-            <div class="product_image">
-                <img src="/assets/home/products/12.jpg"/>
-            </div>
-        </div>
-        <div class="product_image_wrapper">
-            <div class="product_image">
-                <img src="/assets/home/products/13.jpg"/>
-            </div>
-        </div>
-        <div class="product_image_wrapper">
-            <div class="product_image">
-                <img src="/assets/home/products/14.jpg"/>
-            </div>
-        </div>
-        <div class="product_image_wrapper">
-            <div class="product_image">
-                <img src="/assets/home/products/15.jpg"/>
-            </div>
-        </div>
-        <div class="product_image_wrapper">
-            <div class="product_image">
-                <img src="/assets/home/products/13.jpg"/>
-            </div>
-        </div>
-        <div class="product_image_wrapper">
-            <div class="product_image">
-                <img src="/assets/home/products/14.jpg"/>
-            </div>
-        </div>
-        <div class="product_image_wrapper">
-            <div class="product_image">
-                <img src="/assets/home/products/15.jpg"/>
-            </div>
-        </div>
-      <div class="product_image_wrapper">
-        <div class="product_image">
-          <img src="/assets/home/products/1.jpg"/>
-        </div>
-      </div>
-      <div class="product_image_wrapper">
-        <div class="product_image">
-          <img src="/assets/home/products/2.jpg"/>
-        </div>
-      </div>
-      <div class="product_image_wrapper">
-        <div class="product_image">
-          <img src="/assets/home/products/3.jpg"/>
-        </div>
-      </div>
-      <div class="product_image_wrapper">
-        <div class="product_image">
-          <img src="/assets/home/products/4.jpg"/>
-        </div>
-      </div>
-      <div class="product_image_wrapper">
-        <div class="product_image">
-          <img src="/assets/home/products/9.jpg"/>
-        </div>
-      </div>
-      <div class="product_image_wrapper">
-        <div class="product_image">
-          <img src="/assets/home/products/10.jpg"/>
-        </div>
-      </div>
-    </div>
-
-
+    <%= bootstrap_flash %>
+    <%= yield %>
 
 
 
     <!-- FOOTER -->
     <footer>
-      <p class="pull-right"><a href="#">Back to top</a></p>
-      <p>&copy; 2013 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+      <p><a href="#">Contact Us</a>|<a href="#">Terms of Use</a>|<a href="#">Privacy Policy</a></p>
     </footer>
-
-
-    <div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-        <h3 id="myModalLabel">Modal header</h3>
-      </div>
-      <div class="modal-body">
-        <div class="modal_thumbnail">
-            <a href="#" class="thumbnail"><img class="modal_display_image" src="/assets/home/products/1_big.jpg"/></a>
-        </div>
-        <div class="modal_content">
-          <div class="modal_product_title">
-              <a href="#">The Reformation :: CLOTHES :: TOPS :: SUNFLOWER TOP</a>
-          </div>
-          <div class="modal_product_price">
-              <p>$138.00</p>
-          </div>
-          <div class="modal_product_description">
-            <p>We are loving this effortless boho floral number by lucy love! It's flirtly ruffle and overlapping layers makes this dress perfect for any casual summertime event!</p>
-            <p><span class="attribute_name">ASIN:</span><span class="attribute_value">B007ZLEJ7C</span></p>
-            <p><span class="attribute_name">Product Dimensions:</span><span class="attribute_value"> 1 x 1 x 1 inches; 1 pounds </span></p>
-            <p><span class="attribute_name">Shipping Weight:</span><span class="attribute_value"> 1 pounds (View shipping rates and policies)</span></p>
-            <p><span class="attribute_name">Shipping:</span><span class="attribute_value"> This item is also available for shipping to select countries outside the U.S.</span></p>
-
-          </div>
-
-        </div>
-      </div>
-      <div class="modal-footer">
-        <div class="modal_product_social">
-          <div class="twitter-button">
-            <a href="https://twitter.com/share" class="twitter-share-button" data-lang="en" data-url="http://www.trendcheckout.com" data-text="Checkout Latest Styles">Tweet</a>
-          </div>
-          <div class="fb-like" data-href="http://www.trendcheckout.com" data-width="450" data-layout="button_count" data-show-faces="true" data-send="false"></div>
-          <div class="pinterest-button">
-              <a href="//pinterest.com/pin/create/button/
-            ?url=http%3A%2F%2Fwww.flickr.com%2Fphotos%2Fkentbrew%2F6851755809%2F
-            &media=http://fashplanet.com/wp-content/uploads/2013/01/one-shoulder-Black-Prom-Dr.jpg
-            &description=Checkout this cool style"
-                 data-pin-do="buttonPin"
-                 data-pin-config="above">
-                <img src="//assets.pinterest.com/images/pidgets/pin_it_button.png" />
-              </a>
-          </div>
-          <div class="close-button">
-            <button class="btn-mini" data-dismiss="modal" aria-hidden="true">Close</button>
-          </div>
-        </div>
-      </div>
-    </div>
-
-  </div><!-- /.container -->
-
 
 
   <!-- Le javascript
@@ -403,8 +175,7 @@
           <!--</div>&lt;!&ndash;/.well &ndash;&gt;-->
         <!--</div>&lt;!&ndash;/span&ndash;&gt;-->
         <!--<div class="span9">-->
-          <!--<%= bootstrap_flash %>-->
-          <!--<%= yield %>-->
+
         <!--</div>-->
       <!--</div>&lt;!&ndash;/row&ndash;&gt;-->
 
